initial events based kafka changes
